        * [ADDED]: CSS console for SQLiteStudio (under F11 key) to allow customizing all aspects UI look and feel at a low level.
        * [ADDED]: #2805 The 'Save SQL' action in SQL editor now uses the same file if repeated, unless user picks 'select file to save' from drop-down menu.
        * [CHANGE]: Database list is by default from top to bottom, making the status field placed next to the database list, instead of being below it.
        * [BUGFIX]: Fixed 'rows affected' counter when using transactions and executing everything at once.
        * [BUGFIX]: Fixed importing from CSV with empty (NULL) values in last column of last data row.
        * [BUGFIX]: #2853 Allow '$' character as a part of an identifier.
        * [BUGFIX]: #2846 Fixed crash when executing query on a database after just removed other database from the list.
        * [BUGFIX]: #2856 Fixed not working updates manual checking if automatic checking was disabled.
        * [BUGFIX]: #2863 Fixed config dialog to honor DbTree presentation options (sorting, labels) immediately, no manual refreshing required.
        * [BUGFIX]: #2862 Fixed loading SQL scripts into editor when using Chinese language.
        * [BUGFIX]: #2855 Automatic updates are now enabled only for portable build and are disabled by default for other builds.

[3.0.5]
        * [ADDED]: #2831 Ported 'Erase table data' feature (in table's context menu) from version 2.1.5.
        * [CHANGE]: Data view has now a 'cover' with progress bar when commiting more changes at once. This eliminates weird GUI freeze when commiting lots of new/deleted rows.
        * [CHANGE]: Populate dialog has now progress bar when working.
        * [CHANGE]: Enhanced SQL formatter to format CREATE TRIGGER statements in a bit more readable way.
        * [BUGFIX]: #2838 Fixed outstanding bug causing database file to be deleted if a user tried "Test connection" on the database under Windows.