@@ -3,6 +3,7 @@
         * [ADDED]: #2819 Introduced "compact layout" as an option (enabled by default) to minimize all margins on the interface.
         * [ADDED]: CSS console for SQLiteStudio (under F11 key) to allow customizing all aspects UI look and feel at a low level.
         * [ADDED]: #2805 The 'Save SQL' action in SQL editor now uses the same file if repeated, unless user picks 'select file to save' from drop-down menu.
+        * [ADDED]: #2801 Added option to select where to position the new inserted row - above/below selected row, or at the end of data view.
         * [CHANGE]: Database list is by default from top to bottom, making the status field placed next to the database list, instead of being below it.
         * [BUGFIX]: Fixed 'rows affected' counter when using transactions and executing everything at once.
         * [BUGFIX]: Fixed importing from CSV with empty (NULL) values in last column of last data row.
